# docs/swagger.json
@@ -108,7 +108,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.Film"
+                                "$ref": "#/definitions/dto.FilmDetailResponse"
                             }
                         }
                     },
@@ -863,29 +863,6 @@
         }
     },
     "definitions": {
-        "dto.Film": {
-            "type": "object",
-            "properties": {
-                "film_id": {
-                    "type": "integer"
-                },
-                "likes": {
-                    "type": "integer"
-                },
-                "order": {
-                    "type": "integer"
-                },
-                "photo_cut_count": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.FilmCreationRequest": {
             "type": "object",
             "required": [
